--- a/DownloadFundsData/App.config
+++ b/DownloadFundsData/App.config
@@ -4,4 +4,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
+  <appSettings>
+    <add key="nseDataBaseUrl" value="https://www1.nseindia.com/products/dynaContent/equities/indices/historicalindices.jsp"/>
+  </appSettings>
 </configuration>
